[package]
name = "pimoroni_fanshim"
version = "0.1.0"
authors = ["nbrr <nbrr@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"

[dev-dependencies]
log = "0.4.8"
simple_logger = "1.6.0"